<resources>
    <string name="app_name">MyKitchenCounter</string>
    <string name="main_title">My Kitchen Counter</string>
    <string name="new_recipe_string">CREATE A NEW RECIPE</string>
    <string name="recipe_book_string">BROWSE RECIPES</string>
    <string name="enter_ingredient">Enter an ingredient</string>
    <string name="gram_measure">Grams</string>
    <string name="add_another_ingredient">Add Ingredient</string>
    <string name="ndb_search_url_prefix">https://api.nal.usda.gov/ndb/search/?format=json&amp;q=</string>
    <string name="ingredient_spinner_title">Matching database items</string>
    <string name="ndb_search_url_suffix">&amp;ds=Standard%20Reference&amp;max=200&amp;offset=0&amp;api_key=hmwFplvSAREe0f56ZcFDd6kQpF4CCDAh4d5iEJ7R</string>
    <string name="plus_sign">+</string>
    <string name="dialog_title">Your search found these results: </string>
    <string name="get_nutrition_button">Get nutrition</string>
    <string name="ingredients_title">Your chosen ingredients: \n</string>
    <string name="alertdialog_choice">\n%1$s</string>
    <string name="ndb_number_url_prefix">https://api.nal.usda.gov/ndb/V2/reports?</string>
    <string name="ndb_number_label">ndbno=</string>
    <string name="ndb_number_amp">&amp;</string>
    <string name="ndb_number_url_suffix">type=b&amp;format=json&amp;api_key=hmwFplvSAREe0f56ZcFDd6kQpF4CCDAh4d5iEJ7R</string>
    <string name="ingredients_label">YOUR INGREDIENTS: </string>
    <string name="nutrients_list">NAME: %1$s\n CALORIES: %2$s\n FAT: %3$s\n PROTEIN: %4$s\n\n</string>
    <string name="total_nutrition_label">TOTALS: </string>
    <string name="nutrition_totals">\nCALORIES: %1$s\nFAT: %2$s\nPROTEIN: %3$s</string>
    <string name="please_wait_string">Please wait...</string>
    <string name="no_ingredients_found">No ingredients are in this recipe.</string>

    <string name="nutrition_header">Nutrition Facts</string>
    <string name="calories">Calories: %1$s</string>
    <string name="total_fat">Total Fat: %1$s</string>
    <string name="cholesterol">Cholesterol: %1$s</string>
    <string name="sodium">Sodium: %1$s</string>
    <string name="potassium">Potassium: %1$s</string>
    <string name="total_carbohydrates">Total Carbohydrates: %1$s</string>
    <string name="dietary_fiber">Dietary Fiber: %1$s</string>
    <string name="sugars">Sugars: %1$s</string>
    <string name="protein">Protein: %1$s</string>
    <string name="vitamin_a">Vitamin A: %1$s</string>
    <string name="vitamin_b">Vitamin B: %1$s</string>
    <string name="vitamin_c">Vitamin C: %1$s</string>
    <string name="vitamin_d">Vitamin D: %1$s</string>
    <string name="vitamin_e">Vitamin E: %1$s</string>
    <string name="calcium">Calcium: %1$s</string>
    <string name="niacin">Niacin: %1$s</string>
    <string name="iron">Iron: %1$s</string>
    <string name="riboflavin">Riboflavin: %1$s</string>



</resources>
