<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_ingredient_layout"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_ingredient_button"
            android:text="@string/add_another_ingredient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"/>

        <Button
            android:id="@+id/get_nutrition_button"
            android:text="@string/get_nutrition_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"/>

    </LinearLayout>

    <EditText
            android:id="@+id/new_ingredient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight=".1"
            android:hint="@string/enter_ingredient"/>

    <TextView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"/>

</LinearLayout>

