<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/kitchenCounterBackgroundColor"
              android:orientation="vertical">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="72dp"
        android:text="@string/main_title"
        android:textColor="@color/kitchenCounterText"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/new_recipe_button"
            android:src="@drawable/new_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_margin="36dp"
            android:padding="24dp"/>

        <ImageButton
            android:id="@+id/recipe_book_button"
            android:src="@drawable/recipe_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_margin="36dp"
            android:padding="24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_recipe_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_recipe_string"
            android:textSize="16sp"
            android:layout_weight="0.5"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/browse_recipe_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_book_string"
            android:textSize="16sp"
            android:layout_weight="0.5"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>